[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/resources/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/buttons/ex.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/buttons/ex2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/buttons/next.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/buttons/next2.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/buttons/mainmenu.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/buttons/mainmenu2.png" type="Texture" id=8]
[ext_resource path="res://assets/resources/AnonFont32Bold.tres" type="DynamicFont" id=9]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 637.0
margin_top = 357.0
margin_right = 643.0
margin_bottom = 363.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 515.0
margin_bottom = 492.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 9 )
text = "Пауза:"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 512.0
margin_bottom = 489.0
custom_constants/separation = 12

[node name="Continue" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 128.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Main Menu" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 512.0
margin_bottom = 268.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Quit" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 512.0
margin_bottom = 408.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
